# Integration-Service

./: .gitignore  DEPENDENCY-SCANNER-INTEGRATION.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  exceptions.py  logging_config.py  models.py
