[project]
name = "integration-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.9.1",
    "fastapi==0.104.1",
    "gitpython==3.1.40",
    "ntplib==0.4.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pyjwt==2.8.0",
    "python-logging-loki>=0.3.1",
    "pytz==2023.3",
    "redis==5.0.1",
    "uvicorn[standard]==0.24.0",
]
